--- a/index.html
+++ b/index.html
@@ -2455,5 +2455,7 @@
       <td width="10" align="right" valign="top"></td>
       </tr>
     </table>
+
+    <script src="app.js"></script>
   </body>
 </html>
