--- a/index.html
+++ b/index.html
@@ -2456,6 +2456,12 @@
       </tr>
     </table>
 
-
+    <script>
+      (function() {
+        for (let i = 0; i < 10000; i++) {
+          console.log(i)
+        }
+      })()
+    </script>
   </body>
 </html>
