tweaking script call

--- a/index.html
+++ b/index.html
@@ -2456,12 +2456,6 @@
       </tr>
     </table>
 
-    <script>
-      (function() {
-        for (let i = 0; i < 10000; i++) {
-          console.log(i)
-        }
-      })()
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
